// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`default light/dark sets light dark content 1`] = `
[
  "--BV-miscNoteTagsBg: rgb(208, 208, 208);",
  "--BV-miscNoteTagsText: rgb(0, 0, 0);",
  "--BV-miscActivitybarBg: rgb(31, 30, 30);",
  "--BV-miscActivitybarBtnBgPress: rgb(75, 75, 75);",
  "--BV-miscActivitybarText: rgb(208, 208, 208);",
  "--BV-miscEditorAttentionBg: rgb(48, 48, 48);",
  "--BV-miscEditorBacklinkBg: rgb(0, 50, 106);",
  "--BV-miscEditorBacklinkBgHover: rgb(0, 64, 135);",
  "--BV-miscEditorBacklinkText: rgb(235, 235, 235);",
  "--BV-miscEditorBg: rgb(14, 14, 14);",
  "--BV-miscEditorCodeBg: rgb(75, 75, 75);",
  "--BV-miscKbdBg: rgb(106, 106, 106);",
  "--BV-miscKbdText: rgb(208, 208, 208);",
  "--BV-miscLinkText: rgb(64, 150, 243);",
  "--BV-miscSearchHighlightBg: rgb(161, 126, 0);",
  "--BV-colorNeutralBgLayerTop: rgb(29, 29, 29);",
  "--BV-colorNeutralBgLayerMiddle: rgb(14, 14, 14);",
  "--BV-colorNeutralBgLayerBottom: rgb(0, 0, 0);",
  "--BV-colorNeutralBgLayerFloat: rgb(29, 29, 29);",
  "--BV-colorNeutralTextDisabled: rgb(141, 141, 141);",
  "--BV-colorNeutralTextSubdued: rgb(208, 208, 208);",
  "--BV-colorNeutralText: rgb(235, 235, 235);",
  "--BV-colorNeutralTextStrong: rgb(255, 255, 255);",
  "--BV-colorNeutralTextInverted: rgb(0, 0, 0);",
  "--BV-colorNeutralTextFieldBg: rgb(0, 0, 0);",
  "--BV-colorNeutralTextFieldText: rgb(235, 235, 235);",
  "--BV-colorNeutralTextFieldBorder: rgb(141, 141, 141);",
  "--BV-colorNeutralIconDisabled: rgb(106, 106, 106);",
  "--BV-colorNeutralIconSubdued: rgb(208, 208, 208);",
  "--BV-colorNeutralIcon: rgb(235, 235, 235);",
  "--BV-colorNeutralSolid: rgb(208, 208, 208);",
  "--BV-colorNeutralSolidText: rgb(0, 0, 0);",
  "--BV-colorNeutralSolidStrong: rgb(235, 235, 235);",
  "--BV-colorNeutralSolidStronger: rgb(255, 255, 255);",
  "--BV-colorNeutralSolidSubdued: rgb(106, 106, 106);",
  "--BV-colorNeutralSolidFaint: rgb(75, 75, 75);",
  "--BV-colorNeutralBorderSubdued: rgb(48, 48, 48);",
  "--BV-colorNeutralBorder: rgb(75, 75, 75);",
  "--BV-colorNeutralBorderStrong: rgb(106, 106, 106);",
  "--BV-colorSecondaryIconDisabled: rgb(106, 106, 106);",
  "--BV-colorSecondaryIconSubdued: rgb(208, 208, 208);",
  "--BV-colorSecondaryIcon: rgb(235, 235, 235);",
  "--BV-colorSecondarySolid: rgb(75, 75, 75);",
  "--BV-colorSecondarySolidText: rgb(208, 208, 208);",
  "--BV-colorSecondarySolidStrong: rgb(106, 106, 106);",
  "--BV-colorSecondarySolidStronger: rgb(141, 141, 141);",
  "--BV-colorSecondarySolidSubdued: rgb(48, 48, 48);",
  "--BV-colorSecondarySolidFaint: rgb(29, 29, 29);",
  "--BV-colorSecondaryBorderSubdued: rgb(48, 48, 48);",
  "--BV-colorSecondaryBorder: rgb(75, 75, 75);",
  "--BV-colorSecondaryBorderStrong: rgb(106, 106, 106);",
  "--BV-colorPromoteIconDisabled: rgb(161, 0, 78);",
  "--BV-colorPromoteIconSubdued: rgb(227, 69, 137);",
  "--BV-colorPromoteIcon: rgb(241, 97, 156);",
  "--BV-colorPromoteSolid: rgb(241, 97, 156);",
  "--BV-colorPromoteSolidText: rgb(235, 235, 235);",
  "--BV-colorPromoteSolidStrong: rgb(252, 124, 173);",
  "--BV-colorPromoteSolidStronger: rgb(255, 152, 191);",
  "--BV-colorPromoteSolidSubdued: rgb(227, 69, 137);",
  "--BV-colorPromoteSolidFaint: rgb(133, 0, 65);",
  "--BV-colorPromoteBorderSubdued: rgb(209, 43, 114);",
  "--BV-colorPromoteBorder: rgb(227, 69, 137);",
  "--BV-colorPromoteBorderStrong: rgb(241, 97, 156);",
  "--BV-colorCautionIconDisabled: rgb(138, 55, 0);",
  "--BV-colorCautionIconSubdued: rgb(210, 98, 0);",
  "--BV-colorCautionIcon: rgb(232, 116, 0);",
  "--BV-colorCautionSolid: rgb(249, 137, 23);",
  "--BV-colorCautionSolidText: rgb(235, 235, 235);",
  "--BV-colorCautionSolidStrong: rgb(255, 162, 59);",
  "--BV-colorCautionSolidStronger: rgb(255, 188, 102);",
  "--BV-colorCautionSolidSubdued: rgb(235, 235, 235);",
  "--BV-colorCautionSolidFaint: rgb(115, 43, 0);",
  "--BV-colorCautionBorderSubdued: rgb(186, 82, 0);",
  "--BV-colorCautionBorder: rgb(210, 98, 0);",
  "--BV-colorCautionBorderStrong: rgb(232, 116, 0);",
  "--BV-colorCriticalIconDisabled: rgb(167, 0, 0);",
  "--BV-colorCriticalIconSubdued: rgb(238, 67, 49);",
  "--BV-colorCriticalIcon: rgb(249, 99, 76);",
  "--BV-colorCriticalSolid: rgb(249, 99, 76);",
  "--BV-colorCriticalSolidText: rgb(235, 235, 235);",
  "--BV-colorCriticalSolidStrong: rgb(255, 129, 107);",
  "--BV-colorCriticalSolidStronger: rgb(255, 158, 140);",
  "--BV-colorCriticalSolidSubdued: rgb(238, 67, 49);",
  "--BV-colorCriticalSolidFaint: rgb(110, 0, 0);",
  "--BV-colorCriticalBorderSubdued: rgb(221, 33, 24);",
  "--BV-colorCriticalBorder: rgb(238, 67, 49);",
  "--BV-colorCriticalBorderStrong: rgb(249, 99, 76);",
  "--BV-colorPositiveIconDisabled: rgb(0, 93, 57);",
  "--BV-colorPositiveIconSubdued: rgb(0, 149, 98);",
  "--BV-colorPositiveIcon: rgb(28, 168, 114);",
  "--BV-colorPositiveSolid: rgb(52, 187, 132);",
  "--BV-colorPositiveSolidText: rgb(235, 235, 235);",
  "--BV-colorPositiveSolidStrong: rgb(75, 205, 149);",
  "--BV-colorPositiveSolidStronger: rgb(103, 222, 168);",
  "--BV-colorPositiveSolidSubdued: rgb(28, 168, 114);",
  "--BV-colorPositiveSolidFaint: rgb(0, 93, 57);",
  "--BV-colorPositiveBorderSubdued: rgb(0, 130, 82);",
  "--BV-colorPositiveBorder: rgb(0, 149, 98);",
  "--BV-colorPositiveBorderStrong: rgb(28, 168, 114);",
]
`;

exports[`default light/dark sets light dark content 2`] = `
[
  "--BV-miscNoteTagsBg: rgb(70, 70, 70);",
  "--BV-miscNoteTagsText: rgb(255, 255, 255);",
  "--BV-miscActivitybarBg: rgb(26, 32, 44);",
  "--BV-miscActivitybarBtnBgPress: rgb(104 109 120);",
  "--BV-miscActivitybarText: rgb(248, 248, 248);",
  "--BV-miscEditorAttentionBg: rgb(230, 230, 230);",
  "--BV-miscEditorBacklinkBg: rgb(224, 242, 255);",
  "--BV-miscEditorBacklinkBgHover: rgb(202, 232, 255);",
  "--BV-miscEditorBacklinkText: rgb(34, 34, 34);",
  "--BV-miscEditorBg: rgb(255, 255, 255);",
  "--BV-miscEditorCodeBg: rgb(213, 213, 213);",
  "--BV-miscKbdBg: rgb(177, 177, 177);",
  "--BV-miscKbdText: rgb(70, 70, 70);",
  "--BV-miscLinkText: rgb(56, 146, 243);",
  "--BV-miscSearchHighlightBg: rgb(248, 217, 4);",
  "--BV-colorNeutralBgLayerTop: rgb(248, 248, 248);",
  "--BV-colorNeutralBgLayerMiddle: rgb(255, 255, 255);",
  "--BV-colorNeutralBgLayerBottom: rgb(230, 230, 230);",
  "--BV-colorNeutralBgLayerFloat: rgb(253, 253, 253);",
  "--BV-colorNeutralTextDisabled: rgb(144, 144, 144);",
  "--BV-colorNeutralTextSubdued: rgb(70, 70, 70);",
  "--BV-colorNeutralText: rgb(34, 34, 34);",
  "--BV-colorNeutralTextStrong: rgb(0, 0, 0);",
  "--BV-colorNeutralTextInverted: rgb(255, 255, 255);",
  "--BV-colorNeutralTextFieldBg: rgb(255, 255, 255);",
  "--BV-colorNeutralTextFieldText: rgb(34, 34, 34);",
  "--BV-colorNeutralTextFieldBorder: rgb(144, 144, 144);",
  "--BV-colorNeutralIconDisabled: rgb(177, 177, 177);",
  "--BV-colorNeutralIconSubdued: rgb(70, 70, 70);",
  "--BV-colorNeutralIcon: rgb(34, 34, 34);",
  "--BV-colorNeutralSolid: rgb(70, 70, 70);",
  "--BV-colorNeutralSolidText: rgb(255, 255, 255);",
  "--BV-colorNeutralSolidStrong: rgb(34, 34, 34);",
  "--BV-colorNeutralSolidStronger: rgb(0, 0, 0);",
  "--BV-colorNeutralSolidSubdued: rgb(177, 177, 177);",
  "--BV-colorNeutralSolidFaint: rgb(213, 213, 213);",
  "--BV-colorNeutralBorderSubdued: rgb(230, 230, 230);",
  "--BV-colorNeutralBorder: rgb(213, 213, 213);",
  "--BV-colorNeutralBorderStrong: rgb(177, 177, 177);",
  "--BV-colorSecondaryIconDisabled: rgb(177, 177, 177);",
  "--BV-colorSecondaryIconSubdued: rgb(70, 70, 70);",
  "--BV-colorSecondaryIcon: rgb(34, 34, 34);",
  "--BV-colorSecondarySolid: rgb(177, 177, 177);",
  "--BV-colorSecondarySolidText: rgb(70, 70, 70);",
  "--BV-colorSecondarySolidStrong: rgb(144, 144, 144);",
  "--BV-colorSecondarySolidStronger: rgb(109, 109, 109);",
  "--BV-colorSecondarySolidSubdued: rgb(213, 213, 213);",
  "--BV-colorSecondarySolidFaint: rgb(213, 213, 213);",
  "--BV-colorSecondaryBorderSubdued: rgb(230, 230, 230);",
  "--BV-colorSecondaryBorder: rgb(213, 213, 213);",
  "--BV-colorSecondaryBorderStrong: rgb(177, 177, 177);",
  "--BV-colorPromoteIconDisabled: #6cdffe;",
  "--BV-colorPromoteIconSubdued: #46cefc;",
  "--BV-colorPromoteIcon: #31c3fa;",
  "--BV-colorPromoteSolid: #21b8f7;",
  "--BV-colorPromoteSolidText: rgb(255, 255, 255);",
  "--BV-colorPromoteSolidStrong: #15adf1;",
  "--BV-colorPromoteSolidStronger: #0ca1e6;",
  "--BV-colorPromoteSolidSubdued: #5ed9fe;",
  "--BV-colorPromoteSolidFaint: #88e9ff;",
  "--BV-colorPromoteBorderSubdued: #6cdffe;",
  "--BV-colorPromoteBorder: #46cefc;",
  "--BV-colorPromoteBorderStrong: #31c3fa;",
  "--BV-colorCautionIconDisabled: rgb(255, 187, 99);",
  "--BV-colorCautionIconSubdued: rgb(228, 111, 0);",
  "--BV-colorCautionIcon: rgb(203, 93, 0);",
  "--BV-colorCautionSolid: rgb(246, 133, 17);",
  "--BV-colorCautionSolidText: rgb(255, 255, 255);",
  "--BV-colorCautionSolidStrong: rgb(228, 111, 0);",
  "--BV-colorCautionSolidStronger: rgb(203, 93, 0);",
  "--BV-colorCautionSolidSubdued: rgb(255, 160, 55);",
  "--BV-colorCautionSolidFaint: rgb(253, 210, 145);",
  "--BV-colorCautionBorderSubdued: rgb(253, 210, 145);",
  "--BV-colorCautionBorder: rgb(255, 187, 99);",
  "--BV-colorCautionBorderStrong: rgb(255, 160, 55);",
  "--BV-colorCriticalIconDisabled: rgb(255, 183, 169);",
  "--BV-colorCriticalIconSubdued: rgb(247, 92, 70);",
  "--BV-colorCriticalIcon: rgb(234, 56, 41);",
  "--BV-colorCriticalSolid: rgb(234, 56, 41);",
  "--BV-colorCriticalSolidText: rgb(255, 255, 255);",
  "--BV-colorCriticalSolidStrong: rgb(211, 21, 16);",
  "--BV-colorCriticalSolidStronger: rgb(180, 0, 0);",
  "--BV-colorCriticalSolidSubdued: rgb(247, 92, 70);",
  "--BV-colorCriticalSolidFaint: rgb(255, 183, 169);",
  "--BV-colorCriticalBorderSubdued: rgb(255, 205, 195);",
  "--BV-colorCriticalBorder: rgb(255, 183, 169);",
  "--BV-colorCriticalBorderStrong: rgb(255, 155, 136);",
  "--BV-colorPositiveIconDisabled: rgb(103, 222, 168);",
  "--BV-colorPositiveIconSubdued: rgb(21, 164, 110);",
  "--BV-colorPositiveIcon: rgb(0, 143, 93);",
  "--BV-colorPositiveSolid: rgb(0, 143, 93);",
  "--BV-colorPositiveSolidText: rgb(255, 255, 255);",
  "--BV-colorPositiveSolidStrong: rgb(0, 122, 77);",
  "--BV-colorPositiveSolidStronger: rgb(0, 101, 62);",
  "--BV-colorPositiveSolidSubdued: rgb(21, 164, 110);",
  "--BV-colorPositiveSolidFaint: rgb(103, 222, 168);",
  "--BV-colorPositiveBorderSubdued: rgb(137, 236, 188);",
  "--BV-colorPositiveBorder: rgb(103, 222, 168);",
  "--BV-colorPositiveBorderStrong: rgb(73, 204, 147);",
]
`;

exports[`default light/dark sets root content 1`] = `
[
  "--BV-theme: core-theme-test;",
  "--BV-miscActivitybarWidth: 50px;",
  "--BV-miscMiniEditorWidth: 400px;",
  "--BV-miscNoteSidebarWidth: 300px;",
  "--BV-miscPageMaxWidth: 700px;",
  "--BV-miscPagePadding: 3rem 30px 3rem 30px;",
  "--BV-miscWorkspaceSidebarWidth: 300px;",
  "--BV-borderRadiusDEFAULT: 0.25rem;",
  "--BV-borderRadiusNone: 0;",
  "--BV-borderRadiusSm: 0.125rem;",
  "--BV-borderRadiusMd: 0.25rem;",
  "--BV-borderRadiusLg: 0.375rem;",
  "--BV-borderRadiusXl: 0.5rem;",
  "--BV-borderWidthDEFAULT: 1px;",
  "--BV-borderWidthNone: 0px;",
  "--BV-borderWidthLg: 2px;",
  "--BV-borderWidthMd: 1px;",
  "--BV-widescreenWidth: 759px;",
  "--BV-ringWidthDEFAULT: 1px;",
  "--BV-ringWidthNone: 0;",
  "--BV-sizeXs: 20rem;",
  "--BV-sizeSm: 24rem;",
  "--BV-sizeMd: 28rem;",
  "--BV-sizeLg: 32rem;",
  "--BV-sizeXl: 36rem;",
  "--BV-size2xl: 42rem;",
  "--BV-size3xl: 48rem;",
  "--BV-size4xl: 56rem;",
  "--BV-size5xl: 64rem;",
  "--BV-size6xl: 72rem;",
  "--BV-size7xl: 80rem;",
  "--BV-sizeProse: 65ch;",
  "--BV-space0: 0;",
  "--BV-space1: 0.25rem;",
  "--BV-space2: 0.5rem;",
  "--BV-space3: 0.75rem;",
  "--BV-space4: 1rem;",
  "--BV-space5: 1.25rem;",
  "--BV-space6: 1.5rem;",
  "--BV-space7: 1.75rem;",
  "--BV-space8: 2rem;",
  "--BV-space9: 2.25rem;",
  "--BV-space10: 2.5rem;",
  "--BV-space11: 2.75rem;",
  "--BV-space12: 3rem;",
  "--BV-space14: 3.5rem;",
  "--BV-space16: 4rem;",
  "--BV-space20: 5rem;",
  "--BV-space24: 6rem;",
  "--BV-space48: 12rem;",
  "--BV-space64: 16rem;",
  "--BV-space72: 18rem;",
  "--BV-space80: 20rem;",
  "--BV-space96: 24rem;",
  "--BV-space0_5: 0.125rem;",
  "--BV-space1_5: 0.375rem;",
  "--BV-space2_5: 0.625rem;",
  "--BV-spacePx: 1px;",
  "--BV-typographyFontFamilySans: ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";",
  "--BV-typographyFontFamilySerif: ui-serif,Georgia,Cambria,"Times New Roman",Times,serif;",
  "--BV-typographyFontFamilyMono: ui-monospace,SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace;",
  "--BV-typographyTextXlHeight: 1.75rem;",
  "--BV-typographyTextXlSize: 1.25rem;",
  "--BV-typographyTextLgHeight: 1.75rem;",
  "--BV-typographyTextLgSize: 1.125rem;",
  "--BV-typographyTextBaseHeight: 1.5rem;",
  "--BV-typographyTextBaseSize: 1rem;",
  "--BV-typographyTextSmHeight: 1.25rem;",
  "--BV-typographyTextSmSize: 0.875rem;",
  "--BV-typographyTextXsHeight: 1rem;",
  "--BV-typographyTextXsSize: 0.75rem;",
  "--BV-typographyText2xlHeight: 2rem;",
  "--BV-typographyText2xlSize: 1.5rem;",
  "--BV-typographyText3xlHeight: 2.25rem;",
  "--BV-typographyText3xlSize: 1.875rem;",
]
`;

exports[`default sets body 1`] = `
[
  "background-color: var(--BV-colorNeutralBgLayerBottom);",
  "color: var(--BV-colorNeutralText);",
]
`;

exports[`default sets root 1`] = `
[
  "--BV-theme: core-theme-test;",
  "--BV-miscActivitybarWidth: 50px;",
  "--BV-miscMiniEditorWidth: 400px;",
  "--BV-miscNoteSidebarWidth: 300px;",
  "--BV-miscNoteTagsBg: rgb(70, 70, 70);",
  "--BV-miscNoteTagsText: rgb(255, 255, 255);",
  "--BV-miscPageMaxWidth: 700px;",
  "--BV-miscPagePadding: 3rem 30px 3rem 30px;",
  "--BV-miscWorkspaceSidebarWidth: 300px;",
  "--BV-miscActivitybarBg: rgb(26, 32, 44);",
  "--BV-miscActivitybarBtnBgPress: rgb(104 109 120);",
  "--BV-miscActivitybarText: rgb(248, 248, 248);",
  "--BV-miscEditorAttentionBg: rgb(230, 230, 230);",
  "--BV-miscEditorBacklinkBg: rgb(224, 242, 255);",
  "--BV-miscEditorBacklinkBgHover: rgb(202, 232, 255);",
  "--BV-miscEditorBacklinkText: rgb(34, 34, 34);",
  "--BV-miscEditorBg: rgb(255, 255, 255);",
  "--BV-miscEditorCodeBg: rgb(213, 213, 213);",
  "--BV-miscKbdBg: rgb(177, 177, 177);",
  "--BV-miscKbdText: rgb(70, 70, 70);",
  "--BV-miscLinkText: rgb(56, 146, 243);",
  "--BV-miscSearchHighlightBg: rgb(248, 217, 4);",
  "--BV-borderRadiusDEFAULT: 0.25rem;",
  "--BV-borderRadiusNone: 0;",
  "--BV-borderRadiusSm: 0.125rem;",
  "--BV-borderRadiusMd: 0.25rem;",
  "--BV-borderRadiusLg: 0.375rem;",
  "--BV-borderRadiusXl: 0.5rem;",
  "--BV-borderWidthDEFAULT: 1px;",
  "--BV-borderWidthNone: 0px;",
  "--BV-borderWidthLg: 2px;",
  "--BV-borderWidthMd: 1px;",
  "--BV-widescreenWidth: 759px;",
  "--BV-colorNeutralBgLayerTop: rgb(248, 248, 248);",
  "--BV-colorNeutralBgLayerMiddle: rgb(255, 255, 255);",
  "--BV-colorNeutralBgLayerBottom: rgb(230, 230, 230);",
  "--BV-colorNeutralBgLayerFloat: rgb(253, 253, 253);",
  "--BV-colorNeutralTextDisabled: rgb(144, 144, 144);",
  "--BV-colorNeutralTextSubdued: rgb(70, 70, 70);",
  "--BV-colorNeutralText: rgb(34, 34, 34);",
  "--BV-colorNeutralTextStrong: rgb(0, 0, 0);",
  "--BV-colorNeutralTextInverted: rgb(255, 255, 255);",
  "--BV-colorNeutralTextFieldBg: rgb(255, 255, 255);",
  "--BV-colorNeutralTextFieldText: rgb(34, 34, 34);",
  "--BV-colorNeutralTextFieldBorder: rgb(144, 144, 144);",
  "--BV-colorNeutralIconDisabled: rgb(177, 177, 177);",
  "--BV-colorNeutralIconSubdued: rgb(70, 70, 70);",
  "--BV-colorNeutralIcon: rgb(34, 34, 34);",
  "--BV-colorNeutralSolid: rgb(70, 70, 70);",
  "--BV-colorNeutralSolidText: rgb(255, 255, 255);",
  "--BV-colorNeutralSolidStrong: rgb(34, 34, 34);",
  "--BV-colorNeutralSolidStronger: rgb(0, 0, 0);",
  "--BV-colorNeutralSolidSubdued: rgb(177, 177, 177);",
  "--BV-colorNeutralSolidFaint: rgb(213, 213, 213);",
  "--BV-colorNeutralBorderSubdued: rgb(230, 230, 230);",
  "--BV-colorNeutralBorder: rgb(213, 213, 213);",
  "--BV-colorNeutralBorderStrong: rgb(177, 177, 177);",
  "--BV-colorSecondaryIconDisabled: rgb(177, 177, 177);",
  "--BV-colorSecondaryIconSubdued: rgb(70, 70, 70);",
  "--BV-colorSecondaryIcon: rgb(34, 34, 34);",
  "--BV-colorSecondarySolid: rgb(177, 177, 177);",
  "--BV-colorSecondarySolidText: rgb(70, 70, 70);",
  "--BV-colorSecondarySolidStrong: rgb(144, 144, 144);",
  "--BV-colorSecondarySolidStronger: rgb(109, 109, 109);",
  "--BV-colorSecondarySolidSubdued: rgb(213, 213, 213);",
  "--BV-colorSecondarySolidFaint: rgb(213, 213, 213);",
  "--BV-colorSecondaryBorderSubdued: rgb(230, 230, 230);",
  "--BV-colorSecondaryBorder: rgb(213, 213, 213);",
  "--BV-colorSecondaryBorderStrong: rgb(177, 177, 177);",
  "--BV-colorPromoteIconDisabled: #6cdffe;",
  "--BV-colorPromoteIconSubdued: #46cefc;",
  "--BV-colorPromoteIcon: #31c3fa;",
  "--BV-colorPromoteSolid: #21b8f7;",
  "--BV-colorPromoteSolidText: rgb(255, 255, 255);",
  "--BV-colorPromoteSolidStrong: #15adf1;",
  "--BV-colorPromoteSolidStronger: #0ca1e6;",
  "--BV-colorPromoteSolidSubdued: #5ed9fe;",
  "--BV-colorPromoteSolidFaint: #88e9ff;",
  "--BV-colorPromoteBorderSubdued: #6cdffe;",
  "--BV-colorPromoteBorder: #46cefc;",
  "--BV-colorPromoteBorderStrong: #31c3fa;",
  "--BV-colorCautionIconDisabled: rgb(255, 187, 99);",
  "--BV-colorCautionIconSubdued: rgb(228, 111, 0);",
  "--BV-colorCautionIcon: rgb(203, 93, 0);",
  "--BV-colorCautionSolid: rgb(246, 133, 17);",
  "--BV-colorCautionSolidText: rgb(255, 255, 255);",
  "--BV-colorCautionSolidStrong: rgb(228, 111, 0);",
  "--BV-colorCautionSolidStronger: rgb(203, 93, 0);",
  "--BV-colorCautionSolidSubdued: rgb(255, 160, 55);",
  "--BV-colorCautionSolidFaint: rgb(253, 210, 145);",
  "--BV-colorCautionBorderSubdued: rgb(253, 210, 145);",
  "--BV-colorCautionBorder: rgb(255, 187, 99);",
  "--BV-colorCautionBorderStrong: rgb(255, 160, 55);",
  "--BV-colorCriticalIconDisabled: rgb(255, 183, 169);",
  "--BV-colorCriticalIconSubdued: rgb(247, 92, 70);",
  "--BV-colorCriticalIcon: rgb(234, 56, 41);",
  "--BV-colorCriticalSolid: rgb(234, 56, 41);",
  "--BV-colorCriticalSolidText: rgb(255, 255, 255);",
  "--BV-colorCriticalSolidStrong: rgb(211, 21, 16);",
  "--BV-colorCriticalSolidStronger: rgb(180, 0, 0);",
  "--BV-colorCriticalSolidSubdued: rgb(247, 92, 70);",
  "--BV-colorCriticalSolidFaint: rgb(255, 183, 169);",
  "--BV-colorCriticalBorderSubdued: rgb(255, 205, 195);",
  "--BV-colorCriticalBorder: rgb(255, 183, 169);",
  "--BV-colorCriticalBorderStrong: rgb(255, 155, 136);",
  "--BV-colorPositiveIconDisabled: rgb(103, 222, 168);",
  "--BV-colorPositiveIconSubdued: rgb(21, 164, 110);",
  "--BV-colorPositiveIcon: rgb(0, 143, 93);",
  "--BV-colorPositiveSolid: rgb(0, 143, 93);",
  "--BV-colorPositiveSolidText: rgb(255, 255, 255);",
  "--BV-colorPositiveSolidStrong: rgb(0, 122, 77);",
  "--BV-colorPositiveSolidStronger: rgb(0, 101, 62);",
  "--BV-colorPositiveSolidSubdued: rgb(21, 164, 110);",
  "--BV-colorPositiveSolidFaint: rgb(103, 222, 168);",
  "--BV-colorPositiveBorderSubdued: rgb(137, 236, 188);",
  "--BV-colorPositiveBorder: rgb(103, 222, 168);",
  "--BV-colorPositiveBorderStrong: rgb(73, 204, 147);",
  "--BV-ringWidthDEFAULT: 1px;",
  "--BV-ringWidthNone: 0;",
  "--BV-sizeXs: 20rem;",
  "--BV-sizeSm: 24rem;",
  "--BV-sizeMd: 28rem;",
  "--BV-sizeLg: 32rem;",
  "--BV-sizeXl: 36rem;",
  "--BV-size2xl: 42rem;",
  "--BV-size3xl: 48rem;",
  "--BV-size4xl: 56rem;",
  "--BV-size5xl: 64rem;",
  "--BV-size6xl: 72rem;",
  "--BV-size7xl: 80rem;",
  "--BV-sizeProse: 65ch;",
  "--BV-space0: 0;",
  "--BV-space1: 0.25rem;",
  "--BV-space2: 0.5rem;",
  "--BV-space3: 0.75rem;",
  "--BV-space4: 1rem;",
  "--BV-space5: 1.25rem;",
  "--BV-space6: 1.5rem;",
  "--BV-space7: 1.75rem;",
  "--BV-space8: 2rem;",
  "--BV-space9: 2.25rem;",
  "--BV-space10: 2.5rem;",
  "--BV-space11: 2.75rem;",
  "--BV-space12: 3rem;",
  "--BV-space14: 3.5rem;",
  "--BV-space16: 4rem;",
  "--BV-space20: 5rem;",
  "--BV-space24: 6rem;",
  "--BV-space48: 12rem;",
  "--BV-space64: 16rem;",
  "--BV-space72: 18rem;",
  "--BV-space80: 20rem;",
  "--BV-space96: 24rem;",
  "--BV-space0_5: 0.125rem;",
  "--BV-space1_5: 0.375rem;",
  "--BV-space2_5: 0.625rem;",
  "--BV-spacePx: 1px;",
  "--BV-typographyFontFamilySans: ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";",
  "--BV-typographyFontFamilySerif: ui-serif,Georgia,Cambria,"Times New Roman",Times,serif;",
  "--BV-typographyFontFamilyMono: ui-monospace,SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace;",
  "--BV-typographyTextXlHeight: 1.75rem;",
  "--BV-typographyTextXlSize: 1.25rem;",
  "--BV-typographyTextLgHeight: 1.75rem;",
  "--BV-typographyTextLgSize: 1.125rem;",
  "--BV-typographyTextBaseHeight: 1.5rem;",
  "--BV-typographyTextBaseSize: 1rem;",
  "--BV-typographyTextSmHeight: 1.25rem;",
  "--BV-typographyTextSmSize: 0.875rem;",
  "--BV-typographyTextXsHeight: 1rem;",
  "--BV-typographyTextXsSize: 0.75rem;",
  "--BV-typographyText2xlHeight: 2rem;",
  "--BV-typographyText2xlSize: 1.5rem;",
  "--BV-typographyText3xlHeight: 2.25rem;",
  "--BV-typographyText3xlSize: 1.875rem;",
]
`;

exports[`default sets sm override 1`] = `
[
  "--BV-miscActivitybarBg: rgb(255, 255, 255);",
  "--BV-miscActivitybarText: rgb(70, 70, 70);",
  "--BV-miscPagePadding: 1.5rem 10px 2rem 25px;",
]
`;
